methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:9: error: value foreach is not a member of Int
for (i <- 4){
          ^